# Geant4GarfieldDegradInterface

./: CMakeCache.txt  CMakeLists.txt  DegradModel.hh  DetectorMessenger.cc  Documentation.tex  EventAction.cc  EventAction.hh  GasBoxHit.cc  GasBoxHit.hh  HeedInterfaceModel.hh  HeedMessenger.cc  HeedOnlyModel.cc  InterfaceExample.cc  PhysicsList.hh  README.md  RunAction.hh  SteppingAction.cc  cmake_install.cmake  convertDegradFile.py  run1.mac  vis.mac  visALICE.mac  visXenon.mac
ALICE/: ALICE.cc  CMakeLists.txt  run1.mac  vis.mac
ALICE/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GasBoxHit.hh  GasBoxSD.hh  GasModelParameters.hh  GasModelParametersMessenger.hh  HeedDeltaElectronModel.hh  HeedNewTrackModel.hh  MyUserActionInitialization.hh  PrimaryGeneratorAction.hh  RunAction.hh
ALICE/src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GasBoxHit.cc  GasBoxSD.cc  GasModelParameters.cc  GasModelParametersMessenger.cc  HeedDeltaElectronModel.cc  HeedModel.cc  HeedNewTrackModel.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  SiliconSD.cc
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Debug/: InterfaceExample  g4_01.wrl  vis.mac
InterfaceExample.build/Debug/InterfaceExample.build/: dgph  dgph~
InterfaceExample.build/Debug/ZERO_CHECK.build/: Script-675575094B734BAFBBBF8900.sh  dgph  dgph~
InterfaceExample.xcodeproj/: project.pbxproj
Xenon/: CMakeLists.txt  Xenon.cc  run1.mac  vis.mac
Xenon/include/: DegradModel.hh  DetectorConstruction.hh  DetectorMessenger.hh  GarfieldExcitationHit.hh  GarfieldVUVPhotonModel.hh  GasBoxSD.hh  GasModelParameters.hh  GasModelParametersMessenger.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  XenonHit.hh
Xenon/src/: DegradModel.cc  DetectorConstruction.cc  DetectorMessenger.cc  DriftLineTrajectory.cc  DriftLineTrajectoryPoint.cc  EventAction.cc  GarfieldExcitationHit.cc  GasBoxSD.cc  GasModelParameters.cc  GasModelParametersMessenger.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc
docs/: conf.py  index.rst
docs/source/: cmake.rst  code.rst  conf.py  index.rst  intro.rst  macro.rst  prerequisites.rst
include/: Analysis.hh  DegradMessenger.hh  DegradModel.hh  DetectorConstruction.hh  DetectorMessenger.hh  DriftLineHit.hh  DriftLineTrajectory.hh  DriftLineTrajectoryPoint.hh  EventAction.hh  GarfieldExcitationHit.hh  GarfieldVUVPhotonModel.hh  GasBoxHit.hh  GasBoxSD.hh  GasModelParameters.hh  GasModelParametersMessenger.hh  GasModels.hh  GasModelsMessenger.hh  HeedDeltaElectronModel.hh  HeedInterfaceModel.hh  HeedMessenger.hh  HeedModel.hh  HeedNewTrackModel.hh  HeedOnlyModel.hh  MyUserActionInitialization.hh  PhysListEmStandard.cc  PhysListEmStandard.hh  PhysicsList.hh  PhysicsListMessenger.hh  RunAction.hh  SiliconHit.hh  SiliconSD.hh  SteppingAction.hh  XenonSD.hh
src/: DegradMessenger.cc  DegradModel.cc  DetectorConstruction.cc  DetectorMessenger.cc  DriftLineHit.cc  EventAction.cc  GarfieldExcitationHit.cc  GarfieldVUVPhotonModel.cc  GasBoxHit.cc  GasBoxSD.cc  GasModelParameters.cc  GasModelParametersMessenger.cc  GasModels.cc  GasModelsMessenger.cc  HeedDeltaElectronModel.cc  HeedInterfaceModel.cc  HeedModel.cc  HeedNewTrackModel.cc  HeedOnlyModel.cc  MyUserActionInitialization.cc  PhysListEmStandard.cc  PhysicsList.cc  PhysicsListMessenger.cc  RunAction.cc  SiliconHit.cc  SteppingAction.cc  XenonHit.cc  XenonSD.cc
(+57 files in other folders)
